<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoachMe</string>
    <string name="action_settings">Help</string>
    <string name="button_baseball">Baseball</string>
    <string name="home_instruction">Click on a sport button below to learn more about it:</string>
    <string name="home_note">Note:Baseball is the only sport available for now.</string>
    <string name="title_activity_training_filter">Baseball Exercise Selection</string>
    <string name="hello_world">Hello world!</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_content">Content Screen</string>
    <string name="create_account">Create an Account Screen</string>
    <string name="enter_Email">Enter your email address below:</string>
    <string name="enter_Pass">Enter the password you will use below:</string>
    <string name="submit">Submit</string>
    <string name="train">trainingpic</string>
    <string name="settings">Account Settings</string>
    <string name="title_activity_acc_settings">Account Settings</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_login">Login</string>
    <string name="action_create_account">Create an Account</string>
    <string name="action_about">About</string>
    <string name="menu_overflow">Sub Menu</string>
    <string name="no_favorites">You have not added any Favorites.</string>
    <string name="add_favorites">Add to Favorites</string>
    <string name="title_activity_favorites">Favorites Screen</string>
    <string name="action_team">Team Settings</string>
    <string name="error_email_taken">Email address already taken.</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_push_response">PushResponse</string>
    <string name="messages">Messages</string>

</resources>
