<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_overflow"
    android:title="@string/menu_overflow"
    android:icon="@drawable/ic_action_overflow"
    android:showAsAction="always">

    <menu>
    <!-- Create Account -->
    <item
        android:id="@+id/action_create_account"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/action_create_account"
        android:showAsAction="never"/>
    
    <!-- Recover Lost Password -->
    <item
        android:id="@+id/action_forgot_password"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_accounts"
        android:title="@string/action_forgot_password"
        android:showAsAction="never"/>
    
        <!-- Push -->
        <item
        android:id="@+id/action_push"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_message"
        android:title="@string/messages"
        android:showAsAction="never"/>
    
   <!-- Favorites -->
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="4"
        android:icon="@drawable/ic_action_important"
        android:title="@string/action_favorites"
        android:showAsAction="never"/>
    
    <!-- Team Settings -->
    <item
        android:id="@+id/action_team"
        android:orderInCategory="5"
        android:icon="@drawable/ic_action_group"
        android:title="@string/action_team"
        android:showAsAction="never"/>
   
   <!-- Help -->
    <item
        android:id="@+id/action_help"
        android:orderInCategory="6"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_settings"
        android:showAsAction="never"/>
    
    <!-- About -->
    <item android:id="@+id/action_about"
          android:orderInCategory="7"
          android:icon="@drawable/ic_action_about"
          android:title="@string/action_about"
          android:showAsAction="never"/>
    
    <!-- Exit -->
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="8"
        android:icon="@drawable/ic_action_cancel"
        android:title="@string/action_exit"
        android:showAsAction="never"/>
    </menu>
    
    </item>
</menu>