<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_overflow"
    android:title="@string/menu_overflow"
    android:icon="@drawable/ic_action_overflow"
    android:showAsAction="always">

    <menu>
    <!-- Login -->
    <item
        android:id="@+id/action_login"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_person"
        android:title="@string/action_login"
        android:showAsAction="never"/>
    
    <!-- Create Account -->
    <item
        android:id="@+id/action_create_account"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/action_create_account"
        android:showAsAction="never"/>
    
   <!-- Settings -->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never"/>
    
    <!-- About -->
    <item android:id="@+id/action_about"
          android:orderInCategory="4"
          android:icon="@drawable/ic_action_about"
          android:title="@string/action_about"
          android:showAsAction="never"/>
    </menu>
    
    </item>
</menu>